<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>executive_smach_visualization</name>
  <version>3.0.1</version>
  <description>
    This metapackage depends on the SMACH visualization tools.
  </description>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>
  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/smach</url>
  <author>Jonathan Bohren</author>
  <author>Wim Meeussen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>smach_viewer</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>